@@ -1,4 +1,6 @@
 Changes in 5.1.3 (unreleased)
+- GRFCodec specific changes:
+  - Fix creation of PNG as some versions of libpng would see the generated PNG as corrupt.
 - NFORenum specific changes:
   - Data file updates
     - Action 0 train property 2B.
